--- a/CMS_ShopCart/Web.config
+++ b/CMS_ShopCart/Web.config
@@ -10,6 +10,12 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="Db" 
+   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-MvcMovie;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\CmsShoppingCart.mdf" 
+   providerName="System.Data.SqlClient" 
+/>
+    </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
